tests/ui/parser/raw/raw-string-2.stderr
error[E0748]: unterminated raw string
  --> $DIR/raw-string-2.rs:2:13
   |
LL |     let x = r###"here's a long string"# "# "##;
   |             ^ unterminated raw string
   |
   = note: this raw string should be terminated with `"###`
help: consider terminating the string here
   |
LL |     let x = r###"here's a long string"# "# "###;
   |                                             ~~~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0748`.
